tests/suite/snapshots/all__suite__incremental_build_test__dependancy_graph.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"dependancies\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  - com.example.greeting.Formatter
  - com.example.greeting.Formatter
  - com.example.lib.Greeter
  - com.example.lib.Greeter
  - com.example.math.Adder
  - com.example.math.Adder
  - com.example.math.Calc
  - com.example.math.Calc
  - com.example.math.Calc
  - com.example.math.Subtracter
  - com.example.math.Subtracter
 Adder.java
 Calc.java
 Formatter.java
 Greeter.java
 Main.java
 Painter.java
 Strings.java
 Subtracter.java
Dependancy graph
Syncing dependancies
