tests/suite/snapshots/all__suite__incremental_build_test__dependants_graph.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"dependants\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  - Adder.java (math/Adder.java)
  - Adder.java (math/Adder.java)
  - Calc.java (math/Calc.java)
  - Calc.java (math/Calc.java)
  - Greeter.java (lib/Greeter.java)
  - Main.java (Main.java)
  - Main.java (Main.java)
  - Main.java (Main.java)
  - Painter.java (ui/Painter.java)
  - Subtracter.java (math/Subtracter.java)
  - Subtracter.java (math/Subtracter.java)
Adder.java (math/Adder.java)
Calc.java (math/Calc.java)
Dependants graph
Formatter.java (greeting/Formatter.java)
Greeter.java (lib/Greeter.java)
Subtracter.java (math/Subtracter.java)
Syncing dependancies
