tests/suite/snapshots/all__suite__incremental_build_test__dependents_graph.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"dependents\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  - Adder.java (math/Adder.java)
  - Adder.java (math/Adder.java)
  - Calc.java (math/Calc.java)
  - Calc.java (math/Calc.java)
  - Greeter.java (lib/Greeter.java)
  - Main.java (Main.java)
  - Main.java (Main.java)
  - Main.java (Main.java)
  - Main.java (Main.java)
  - Painter.java (ui/Painter.java)
  - Subtracter.java (math/Subtracter.java)
  - Subtracter.java (math/Subtracter.java)
Adder.java (math/Adder.java)
Calc.java (math/Calc.java)
Dependents graph
Formatter.java (greeting/Formatter.java)
Greeter.java (lib/Greeter.java)
Strings.java (util/Strings.java)
Subtracter.java (math/Subtracter.java)
Syncing dependencies
