tests/suite/snapshots/all__suite__incremental_build_test__full_build_output.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
Compiled in <TIME>s
Compiling using full rebuild
Creating annotation library directory: <ROOT>/target/lib-annotations
Creating build directory: <ROOT>/target/bin
Creating build processor directory: <ROOT>/target/processor-bin
Creating generated src directory: <ROOT>/target/generated-source
Creating library directory: <ROOT>/target/lib
Syncing dependancies
