tests/suite/snapshots/all__suite__incremental_build_test__incremental_build_after_leaf_edit.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
  <ROOT>/src/Main.java
  <ROOT>/src/greeting/Formatter.java
  <ROOT>/src/lib/Greeter.java
  <ROOT>/src/ui/Painter.java
Compiled in <TIME>s
Compiling using incremental build (4 stale files)
Syncing dependencies
