tests/suite/snapshots/all__suite__incremental_build_test__incremental_build_after_mid_edit.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
Compiled in <TIME>s
Compiling using incremental build (4 stale files)
Syncing dependencies
