tests/suite/snapshots/all__suite__incremental_build_test__incrimental_build_no_changes.snap
---
source: tests/suite/incremental_build_test.rs
expression: "normalize_output(&run(&dest, &[\"build\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
Compiled in <TIME>s
Compiling using incrimental build (0 stale files)
Syncing dependancies
